--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 10.x
-      - name: npm install, build, and test
+      - name: npm install, start, and test
         run: |
           npm install yarn -g
           yarn --pure-lockfile
