--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,17 +19,4 @@ jobs:
         run: |
           npm install yarn -g
           yarn --pure-lockfile
-          npx lerna run start
-      - name: git checkout PR
-        run: |
-          git config --global user.name $GIT_USER
-          git config --global user.email $GIT_EMAIL
-          git remote set-url origin https://x-access-token:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY
-          git checkout $GITHUB_HEAD_REF
-      - name: lerna version
-        run: |
-          npx lerna version --yes --no-commit-hooks --no-push -m "chore: updated package versions"
-      - name: Push changes
-        run: |
-          git status
-          git push --follow-tags
+          lerna run start
