--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "test-monorepo",
   "private": true,
   "devDependencies": {
-    "lerna": "^3.19.0",
-    "node": "^15.0.1"
+    "lerna": "3.19.0"
   },
   "workspaces": [
     "packages/*"
