--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -28,7 +28,7 @@ jobs:
           git config --global user.name $GIT_USER
           git config --global user.email $GIT_EMAIL
           git remote set-url origin https://x-access-token:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY
-          git checkout $GITHUB_HEAD_REF
+          git checkout main
       - name: lerna version
         run: |
           npx lerna version --yes --no-commit-hooks --no-push -m "chore: updated package versions"
